loads person activity when event description or icon is clicked. changed filter icon to pencil.fixed 26.1.0 version bug in android manifest.

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
 
         <activity
             android:name=".MapFrag"
-            android:label="@string/title_activity_map_frag"></activity>
+            android:label="@string/title_activity_map_frag" />
+        <activity android:name=".PersonActivity"></activity>
     </application>
 
 </manifest>
