when life event is clicked in personactivity new map frag loads centered on event

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
         <activity
             android:name=".MapFrag"
             android:label="@string/title_activity_map_frag" />
-        <activity android:name=".PersonActivity"></activity>
+        <activity android:name=".PersonActivity" />
+        <activity android:name=".MapActivity"></activity>
     </application>
 
 </manifest>
