--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -38,8 +38,14 @@
         <activity
             android:name=".MapFrag"
             android:label="@string/title_activity_map_frag" />
-        <activity android:name=".PersonActivity" />
-        <activity android:name=".MapActivity"></activity>
+        <activity android:name=".PersonActivity"
+            android:parentActivityName=".MainActivity"
+            />
+        <activity android:name=".MapActivity"
+            android:parentActivityName=".PersonActivity"
+            >
+
+        </activity>
     </application>
 
 </manifest>
