--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             android:parentActivityName=".MainActivity"
             />
         <activity android:name=".MapActivity"
-            android:parentActivityName=".PersonActivity"
+            android:parentActivityName=".MainActivity"
             >
 
         </activity>
